fixed overflow again

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,7 +30,6 @@ html,body {
     padding: 0px;
     overflow-x:hidden; 
     overflow-y: auto;
-    overflow: hidden;
   
 
     @include md {
